--- a/src/main/resources/pccc.properties
+++ b/src/main/resources/pccc.properties
@@ -7,7 +7,7 @@
 #
 #####################################  
 
-pccc.use.noDB.mode = false
+pccc.use.noDB.mode = true
 
 pccc.web.host = http://gate0932.distribution.edf.fr
 pccc.web.port = 9090
